<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class ActividadAnimal extends Model
{
    protected $fillable = [
        'animal_id',
        'actividad_id',
    ];

    public function animals()
    {
        return $this->hasMany('App\Models\Animal');
    }

    public function actividads()
    {
        return $this->hasMany('App\Models\Actividad');
    }
}
