<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class AnimalRecinto extends Model
{
    protected $fillable = [
        'animal_id',
        'recinto_id',
    ];

    public function animals()
    {
        return $this->hasMany('App\Models\Animal');
    }

    public function recintos()
    {
        return $this->hasMany('App\Models\Recinto');
    }
}
