<?php

namespace App\Models;

use Illuminate\Database\Eloquent\Model;

//Generated By PlantUML Command
class CuidadorAnimal extends Model
{
    protected $fillable = [
        'animal_id',
        'cuidador_id',
    ];

    public function animals()
    {
        return $this->hasMany('App\Models\Animal');
    }

    public function cuidadors()
    {
        return $this->hasMany('App\Models\Cuidador');
    }
}
