<?php 
use Illuminate\Support\Facades\Schema;

use Illuminate\Database\Schema\Blueprint;
use Illuminate\Database\Migrations\Migration;
//Generated By PlantUML Command
class CreateActividads extends Migration{
	public function up(){ 
 		Schema::create('actividads', function (Blueprint $table) { 
			$table->bigIncrements('id');
			$table->string('name');
			$table->string('dia_semana');
			$table->string('hora_inicio');
			$table->string('hora_fin');
			$table->timestamps();
		});
 	} 
	public function down(){
 
	} 
}